<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/colorBackground">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:gravity="center"
      android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:fontFamily="@font/fontenetflix"
        android:textSize="70dp"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/singinTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sing In"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/emailLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:hint="@string/hint_emails_singin"
        android:backgroundTint="@color/colorTextPrimary"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorTextPrimary"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:hint="@string/hint_password_singin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:textColor="@color/colorOnboardIndicatorInactive"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/singinButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="sing in"
        android:textSize="20dp"
        android:fontFamily="@font/fontenetflix"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/singinGoogleAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:fontFamily="@font/fontenetflix"
        android:text="@string/textGoogleAccountSingin"
        android:textSize="20dp"
        app:backgroundTint="@color/colorTextPrimary"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/singinIcloudAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/textIcloudSingin"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_baseline_cloud_24"
        android:fontFamily="@font/fontenetflix"
        app:cornerRadius="0dp"
        app:backgroundTint="@color/colorTextPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonToRedirectForRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/transparentColor"
        android:gravity="center_horizontal"
        android:text="@string/createAccountTextView"
        android:textAlignment="center"
        android:textColor="@color/colorOnboardIndicatorInactive" />


  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
